--- a/2016-09-15-python-classmethod-and-staticmethod.org
+++ b/2016-09-15-python-classmethod-and-staticmethod.org
@@ -28,7 +28,7 @@ tags: [built-in functions, staticmethod, classmethod]
 
 ** Data model
    In order to illustrate the core idea of these built-in functions lets
-   create a casual but colorful code snippet in accordion with OOP concept:
+   create a casual but colorful code snippet:
    #+BEGIN_SRC  python :results output :session stdlib :exports code
      class Vehicle:
          """Naturally it is a vehicle"""
@@ -39,7 +39,7 @@ tags: [built-in functions, staticmethod, classmethod]
              """by default all cars are black"""
              Vehicle.counter += 1  # increments the CLASS variable
              # self.counter += 1 - increments the PARTICULAR ITEM VARIABLE
-             # the variables below are instance variables
+             # the variables below are the particular instance variables
              if kwargs:
                  self.color = kwargs['color']
              else:
@@ -117,11 +117,11 @@ tags: [built-in functions, staticmethod, classmethod]
 
 * Conclusion
 
-** Both =staticmethod= and =classmethod=
+  Both =staticmethod= and =classmethod=
    
-*** can be called without the instance
+** can be called without the instance
 
-*** =self= instance argument not passes to them
+** =self= instance argument not passes to them
 
 ** =staticmethod=
     #+BEGIN_QUOTE
