--- a/2016-08-27-mark-up-samples.org
+++ b/2016-08-27-mark-up-samples.org
@@ -2,9 +2,9 @@
 ---
 layout: page
 title: Make a stress on words
-tagline: " Keep your thought clear"
+tagline: " and keep your thoughts dry"
 permalink: /org-mode/mark-up-samples.html
-categories: [mark-up, org-mode]
+categories: [emacs, mark-up, org-mode, literate programming]
 tags: [html export, mark-up, samples]
 ---
 #+END_HTML
