--- a/2016-09-06-fork-git-repository.org
+++ b/2016-09-06-fork-git-repository.org
@@ -1,11 +1,11 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: Git
-tagline: " fork a valuable project"
+title: Git fork
+tagline: " a valuable project"
 permalink: /git/tips/how-to-fork-repository.html
-categories: [git]
-tags: [tutorial, clone, remotes]
+categories: [git, literate programming]
+tags: [tutorial, clone, remotes, emacs, babel]
 ---
 #+END_HTML
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
