--- a/2016-09-06-how-to-clone-git-repo.org
+++ b/2016-09-06-how-to-clone-git-repo.org
@@ -1,11 +1,11 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: Git
+title: Github account fulfilled by clones
 tagline: " host all your code there"
 permalink: /git/tips/how-to-clone-repository.html
-categories: [git]
-tags: [tutorial, clone, remotes]
+categories: [git, literate programming]
+tags: [tutorial, clone, remotes, emacs, babel]
 ---
 #+END_HTML
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
