--- a/2016-09-09-python-standard-library.org
+++ b/2016-09-09-python-standard-library.org
@@ -1,8 +1,8 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: Python
-tagline: " standard library dissection"
+title: Python standard library
+tagline: " dissection"
 permalink: /python/tdd/unittest_init.html
 categories: [python, stdlib, TDD, literate programming]
 tags: [tutorial, unittest, methodology]
