--- a/2016-08-27-python-and-sqlite3-interaction.org
+++ b/2016-08-27-python-and-sqlite3-interaction.org
@@ -1,11 +1,11 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: SQLite3
+title: SQLite3 in Babel
 tagline: " Small, fast, reliable!"
 permalink: /python/stdlib/sqlite3/interaction.html
-categories: [org-mode, Python, SQLite3]
-tags: [tutorial, samples]
+categories: [org-mode, Python, SQLite3, literate programming]
+tags: [tutorial, samples, babel, emacs]
 ---
 #+END_HTML
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
