--- a/2016-08-30-sqlite3-integrity-check.org
+++ b/2016-08-30-sqlite3-integrity-check.org
@@ -1,11 +1,11 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: SQLite3
+title: SQLite3 data integrity examination
 tagline: " Keep data purity"
 permalink: /sqlite3/data-integrity-testing.html
-categories: [org-mode, Python, SQLite3]
-tags: [TDD, samples, data integrity]
+categories: [org-mode, Python, SQLite3, literate programming]
+tags: [TDD, samples, data integrity, emacs]
 ---
 #+END_HTML
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
