--- a/2016-10-15-javascript-inside-emacs.org
+++ b/2016-10-15-javascript-inside-emacs.org
@@ -1,7 +1,7 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: JavaScript inside Emacs
+title: Run JavaScript inside Emacs
 tagline: " do what you want in the literal manner"
 permalink: /emacs/javascript-intro.html
 categories: [emacs, javascript, nodejs]
