--- a/2016-11-04-heap-queue-algorithm.org
+++ b/2016-11-04-heap-queue-algorithm.org
@@ -221,3 +221,10 @@ tags: [heap queue, stdlib, heapq]
     : [(5, 'write code'), (6, 'test it up'), (7, 'release product')]
     : (5, 'write code')
     
+** Time complexity
+   Lets create a random sequence of integers
+   #+BEGIN_SRC python :results output :session stdlib :exports both
+     from random import randint
+     numbers = [randint(0,100) for i in range(100)]
+   #+END_SRC
+   Now it's time to evaluate with this data-set:
