--- a/2016-11-04-heap-queue-algorithm.org
+++ b/2016-11-04-heap-queue-algorithm.org
@@ -221,10 +221,69 @@ tags: [heap queue, stdlib, heapq]
     : [(5, 'write code'), (6, 'test it up'), (7, 'release product')]
     : (5, 'write code')
     
+
 ** Time complexity
-   Lets create a random sequence of integers
-   #+BEGIN_SRC python :results output :session stdlib :exports both
-     from random import randint
-     numbers = [randint(0,100) for i in range(100)]
-   #+END_SRC
-   Now it's time to evaluate with this data-set:
+    #+BEGIN_QUOTE
+    Task: We have a large list of integers which is appended 1000 times with a single
+    value during each iteration. Try to extract 10 smallest values out of
+    it after every modification. Compare the execution time
+    #+END_QUOTE
+    Lets create a random sequence of integers
+    #+BEGIN_SRC python :results output :session stdlib :exports code
+      from random import randint
+      numbers = [randint(0,100) for i in range(100)]
+    #+END_SRC
+
+*** Wrong usage
+    Lets create a function to detect minimum values in the data-set:
+    #+BEGIN_SRC python :results output :session stdlib :exports code
+      def min_10_values_by_native_sort(l):
+          l.sort()
+          return l[:10]
+    #+END_SRC
+
+    #+RESULTS:
+
+    And using =heapq= module
+    #+BEGIN_SRC python :results output :session stdlib :exports code
+      from heapq import nsmallest, heapify
+
+      def min_10_values_in_the_heap(h):
+          heapify(h)
+          return nsmallest(10, h)
+    #+END_SRC
+
+    #+RESULTS:
+
+    Now it's time to evaluate with this data-set:
+    #+BEGIN_SRC python :results output :session stdlib :exports code
+      def time_complexity_analysis(n, l, f):
+          result = []
+          for i in range(n):
+              l.append(randint(0,100))
+              result.append(f(l))
+          return result
+    #+END_SRC
+
+    #+RESULTS:
+
+
+    #+BEGIN_SRC python :results output :session stdlib :exports both
+    i = time(); time_complexity_analysis(10, numbers, min_10_values_by_native_sort); print(time()-i)
+    i = time(); time_complexity_analysis(10, numbers, min_10_values_in_the_heap); print(time()-i)
+    #+END_SRC
+
+    #+RESULTS:
+    : [[0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4]]
+    : 0.00024127960205078125
+    : [[0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4]]
+    : 0.0007870197296142578
+
+*** Algorithm analysis
+    Obviously that =heapq= module works 4 time slowly than a native sort.
+    *But* try to elaborate our algorithm:
+    - =heapify= initial data-set once
+    - =heappush= new values into it many times
+    - detect =nsmallest= after each modification
+
+*** Correct usage
