--- a/2016-11-04-heap-queue-algorithm.org
+++ b/2016-11-04-heap-queue-algorithm.org
@@ -231,8 +231,10 @@ tags: [heap queue, stdlib, heapq]
     Lets create a random sequence of integers
     #+BEGIN_SRC python :results output :session stdlib :exports code
       from random import randint
-      numbers = [randint(0,100) for i in range(100)]
+      numbers = [randint(0,10000) for i in range(100)]
     #+END_SRC
+
+    #+RESULTS:
 
 *** Wrong usage
     Lets create a function to detect minimum values in the data-set:
@@ -262,7 +264,7 @@ tags: [heap queue, stdlib, heapq]
           for i in range(n):
               l.append(randint(0,100))
               result.append(f(l))
-          return result
+          return result[-1]
     #+END_SRC
 
     #+RESULTS:
@@ -274,10 +276,10 @@ tags: [heap queue, stdlib, heapq]
     #+END_SRC
 
     #+RESULTS:
-    : [[0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 1, 1, 1, 3, 3, 4, 4, 4, 5], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4]]
-    : 0.00024127960205078125
-    : [[0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4], [0, 0, 1, 1, 1, 3, 3, 4, 4, 4]]
-    : 0.0007870197296142578
+    : [3, 34, 39, 46, 49, 58, 58, 64, 76, 79]
+    : 0.00019621849060058594
+    : [3, 31, 33, 34, 34, 39, 46, 46, 49, 58]
+    : 0.0005691051483154297
 
 *** Algorithm analysis
     Obviously that =heapq= module works 4 time slowly than a native sort.
@@ -287,3 +289,28 @@ tags: [heap queue, stdlib, heapq]
     - detect =nsmallest= after each modification
 
 *** Correct usage
+    Lets restrict
+
+    #+BEGIN_SRC python :results output :session stdlib :exports both
+      def custom_heap_algorithm(n, h):
+          """h is prepared heap"""
+          result = []
+          for i in range(n):
+              heappush(h, randint(0, 100))
+              result.append(nsmallest(10, h))
+          return result[-1]
+    #+END_SRC
+
+    #+RESULTS:
+
+    #+BEGIN_SRC python :results output :session stdlib :exports code
+    i = time(); time_complexity_analysis(10, numbers, min_10_values_by_native_sort); print(time()-i)
+    i = time(); heapify(numbers); custom_heap_algorithm(10, numbers); print(time()-i)
+    #+END_SRC
+
+    #+RESULTS:
+    : [3, 3, 4, 5, 5, 8, 9, 10, 18, 19]
+    : 0.0002048015594482422
+    : [3, 3, 4, 5, 5, 7, 8, 9, 10, 14]
+    : 0.0005049705505371094
+
